超链接为相对路径

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         </div>
         <div class='questions'>
             <div class="row no-gutters">
-                <div class="col-6">
+                <!-- <div class="col-6">
                     <div class="text-center question">
                         <label for="question1"><span>1. </span>1 + 1 =</label>                       
                         <input class="form-control" id="question1">     
@@ -141,7 +141,7 @@
                         <input class="form-control" id="question1">    
                         <span class="check"><img src="/assets/img/x.svg" alt="" width="32" height="32" title="Bootstrap"></span>                  
                     </div>                                    
-                </div>
+                </div> -->
             </div>
 
 
@@ -151,7 +151,7 @@
             <button id='reset' type="button" class="btn btn-primary">刷新</button>
         </div>
         <div class="setting">
-            <a href="/setting.html">设置</a>
+            <a href="./setting.html">设置</a>
         </div>
     </div>
 
